--- a/INLABMA/inst/not_a_vignette/spatial_inla.tex
+++ b/INLABMA/inst/not_a_vignette/spatial_inla.tex
@@ -1,3 +1,6 @@
+%Sweave("spatial_inla.Rnw", encoding="UTF-8", keep.source=FALSE)
+%system("pdflatex spatial_inla.tex")
+%system("bibtex spatial_inla")
 \documentclass[article]{jss}
 
 \usepackage{thumbpdf}
@@ -425,12 +428,12 @@ and $\varepsilon_i$ is random Gaussian error term.
 > library(maptools)
 > data(boston)
 > library(INLA)
-> adj<- nb2mat(boston.soi, style="B")
-> boston.c$ID<-1:nrow(boston.c)
-> form<-log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) +  AGE + 
-+ log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)+
-+ f(ID, model="besag", graph=adj )
-> m1<-inla(form, data=boston.c)
+> adj <- nb2mat(boston.soi, style = "B")
+> boston.c$ID <- 1:nrow(boston.c)
+> form <- log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) + 
++     AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT) + 
++     f(ID, model = "besag", graph = adj)
+> m1 <- inla(form, data = boston.c)
 \end{Sinput}
 \end{Schunk}
 
@@ -453,7 +456,7 @@ Call:
 
 Time used:
  Pre-processing    Running inla Post-processing           Total 
-          1.488           0.718           0.196           2.402 
+          1.476           0.767           0.235           2.478 
 
 Fixed effects:
                  mean       sd 0.025quant  0.5quant 0.975quant      kld
@@ -567,15 +570,10 @@ predictors, using \code{control.predictor=list(compute=TRUE)}.
 
 \begin{Schunk}
 \begin{Sinput}
-> #fpp<-Ntrees~1+f(japgrd$INLAIDX, model="rw2d",nrow=nrow, ncol=ncol)
-> fpp<-Ntrees~1+f(japgrd$SPIDX, model="bym", graph=adjpine)
-> #INLA-LA
->    japinlala<-inla(fpp,
-+    family="poisson", data=as.data.frame(japgrd),
-+ #   working.directory = japwdla, keep=TRUE,
-+    control.compute=list(dic=TRUE),
-+    control.predictor=list(compute=TRUE))
-> japgrd$INLALA<- japinlala$summary.fitted.values[,1]
+> fpp <- Ntrees ~ 1 + f(japgrd$SPIDX, model = "bym", graph = adjpine)
+> japinlala <- inla(fpp, family = "poisson", data = as.data.frame(japgrd), 
++     control.compute = list(dic = TRUE), control.predictor = list(compute = TRUE))
+> japgrd$INLALA <- japinlala$summary.fitted.values[, 1]
 \end{Sinput}
 \end{Schunk}
 \noindent
@@ -1003,23 +1001,16 @@ A simple wrapper function can be defined as follows for the SEM model:
 
 \begin{Schunk}
 \begin{Sinput}
-> semwr.inla<-function(formula, d, W, rho,...)
-+ {
-+         IrhoW<-diag(nrow(W))-rho*W
-+         IrhoW2<-IrhoW%*%t(IrhoW)
-+ 
-+         environment(formula)<-environment()
-+ 
-+         formula<-update(formula,
-+           . ~ . + f(idx, model="generic0", Cmatrix =IrhoW2) )
-+ 
-+         res<-inla(formula, data=d, ...)
-+ 
-+   #Compute log-determinat to correct the marginal-loglikelihood
-+         res$logdet<-as.numeric(determinant(IrhoW2)$modulus)
-+         res$mlik<-res$mlik+res$logdet/2
-+ 
-+         return(res)
+> semwr.inla <- function(formula, d, W, rho, ...) {
++     IrhoW <- diag(nrow(W)) - rho * W
++     IrhoW2 <- IrhoW %*% t(IrhoW)
++     environment(formula) <- environment()
++     formula <- update(formula, . ~ . + f(idx, model = "generic0", 
++         Cmatrix = IrhoW2))
++     res <- inla(formula, data = d, ...)
++     res$logdet <- as.numeric(determinant(IrhoW2)$modulus)
++     res$mlik <- res$mlik + res$logdet/2
++     return(res)
 + }
 \end{Sinput}
 \end{Schunk}
@@ -1064,21 +1055,18 @@ standard MCMC methods.
 
 \begin{Schunk}
 \begin{Sinput}
-> rrho<-seq(0.01, .99, len=5)
+> rrho <- seq(0.01, 0.99, len = 5)
 \end{Sinput}
 \end{Schunk}
 \begin{Schunk}
 \begin{Sinput}
-> semmodels = mclapply(rrho,
-+         function(rho) {
-+                 sem.inla(form, d=boston.c, W=boston.mat, rho=rho,
-+                         family = "gaussian", impacts=FALSE,
-+                         control.family = list(hyper = zero.variance),
-+                         control.predictor=list(compute=TRUE),
-+                         control.compute=list(dic=TRUE, cpo=TRUE),
-+                         control.inla=list(print.joint.hyper=TRUE), verbose=FALSE
-+                 )
-+         })
+> semmodels = mclapply(rrho, function(rho) {
++     sem.inla(form, d = boston.c, W = boston.mat, rho = rho, family = "gaussian", 
++         impacts = FALSE, control.family = list(hyper = zero.variance), 
++         control.predictor = list(compute = TRUE), control.compute = list(dic = TRUE, 
++             cpo = TRUE), control.inla = list(print.joint.hyper = TRUE), 
++         verbose = FALSE)
++ })
 \end{Sinput}
 \end{Schunk}
 
@@ -1091,7 +1079,7 @@ the density of the prior at the different values of $\rho$.
 
 \begin{Schunk}
 \begin{Sinput}
-> bmasem<-BMA2(semmodels, rrho, 1 , impacts=FALSE)
+> bmasem <- BMA2(semmodels, rrho, 1, impacts = FALSE)
 \end{Sinput}
 \end{Schunk}
 
@@ -1160,9 +1148,8 @@ Note that now we will beusing a binary adjacency matrix as the random
 effects have an intrinsic CAR specification:
 \begin{Schunk}
 \begin{Sinput}
-> #Binary adjacency matrix
-> boston.matB<-listw2mat(nb2listw(boston.soi, style="B"))
-> bmspB<-as(boston.matB, "CsparseMatrix")
+> boston.matB <- listw2mat(nb2listw(boston.soi, style = "B"))
+> bmspB <- as(boston.matB, "CsparseMatrix")
 \end{Sinput}
 \end{Schunk}
 
@@ -1172,29 +1159,23 @@ a prior for the precission of the random effects in variable \code{fhyper}.
 
 \begin{Schunk}
 \begin{Sinput}
-> #Run models
-> rlambda<-seq(0.01, .2, length.out=11)
-> #Setting of hyper-parameters
-> fhyper=list(prec=list(prior="loggamma", param=c(1,1), initial=log(1), fixed=FALSE))
-> #Formula
-> form2<-log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) + 
+> rlambda <- seq(0.01, 0.2, length.out = 11)
+> fhyper = list(prec = list(prior = "loggamma", param = c(1, 1), 
++     initial = log(1), fixed = FALSE))
+> form2 <- log(CMEDV) ~ CRIM + ZN + INDUS + CHAS + I(NOX^2) + I(RM^2) + 
 +     AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)
 \end{Sinput}
 \end{Schunk}
 
 \begin{Schunk}
 \begin{Sinput}
-> lerouxmodels = mclapply(rlambda,
-+         function(lambda) {
-+                 leroux.inla(form2, d=boston.c, W=boston.matB, lambda=lambda,
-+                         fhyper=fhyper, improve=TRUE,
-+                         family = "gaussian",
-+ #   control.family = list(hyper = zero.variance),
-+                         control.predictor=list(compute=TRUE),
-+                         control.compute=list(dic=TRUE, cpo=TRUE),
-+                         control.inla=list(print.joint.hyper=TRUE), verbose=FALSE
-+                 )
-+         })
+> lerouxmodels = mclapply(rlambda, function(lambda) {
++     leroux.inla(form2, d = boston.c, W = boston.matB, lambda = lambda, 
++         fhyper = fhyper, improve = TRUE, family = "gaussian", 
++         control.predictor = list(compute = TRUE), control.compute = list(dic = TRUE, 
++             cpo = TRUE), control.inla = list(print.joint.hyper = TRUE), 
++         verbose = FALSE)
++ })
 \end{Sinput}
 \end{Schunk}
 
@@ -1203,7 +1184,7 @@ a prior for the precission of the random effects in variable \code{fhyper}.
 
 \begin{Schunk}
 \begin{Sinput}
-> bmaleroux<-BMA2(lerouxmodels, rlambda, 0, impacts=FALSE)
+> bmaleroux <- BMA2(lerouxmodels, rlambda, 0, impacts = FALSE)
 \end{Sinput}
 \end{Schunk}
 
@@ -1211,20 +1192,14 @@ The same model can be fitted usig package \pkg{CARBayes} as follows:
 
 \begin{Schunk}
 \begin{Sinput}
-> #Run with CARBAYES
 > library(CARBayes)
-> 
-> #New model
-> #form2<-log(CMEDV) ~CRIM+ZN + INDUS + CHAS + I(NOX^2)+
-> #   I(RM^2) +  AGE + log(DIS) + log(RAD) + TAX + PTRATIO + B + log(LSTAT)
-> 
 \end{Sinput}
 \end{Schunk}
 \begin{Schunk}
 \begin{Sinput}
 > attach(boston.c)
-> lcarbayes<- gaussian.lerouxCAR (form2, W=as.matrix(bmspB), burnin=500, 
-+    n.sample=2500, thin=5)
+> lcarbayes <- gaussian.lerouxCAR(form2, W = as.matrix(bmspB), 
++     burnin = 500, n.sample = 2500, thin = 5)
 > detach(boston.c)
 \end{Sinput}
 \end{Schunk}
@@ -1239,7 +1214,7 @@ fact that different priors have been used for the variances of the random
 effects and the error term (????). **Check what happens to the other parameters**
 
 % latex table generated in R 3.0.1 by xtable 1.7-1 package
-% Mon May 20 20:24:46 2013
+% Tue May 21 21:06:28 2013
 \begin{table}[ht]
 \centering
 \begin{tabular}{rrrrr}
