--- a/INLABMA/inst/not_a_vignette/spatial_inla.Rnw
+++ b/INLABMA/inst/not_a_vignette/spatial_inla.Rnw
@@ -469,7 +469,7 @@ plot(m1$marginals.hyperpar[[2]], xlim=c(0,50), type="l",
 @
 \end{center}
 \caption{Marginals of the precisions of the error term (top) and
-spatial random effects (bottom).}
+spatial random effects (bottom), Boston housing data}
 \label{fig:marg1}
 \end{figure}
 
@@ -479,7 +479,7 @@ spatial random effects (bottom).}
 Point patterns are analysed with INLA as the result of a counting process,
 i.e., points are not modelled directly but they are aggregated over a a grid
 of small squares. For this reason, the analysis of point patterns is conducted
-similarly as that of lattice data: counts are available for each square and 
+similarly to that of lattice data: counts are available for each square and 
 these are assigned neighbours according to the adjacent squares. Then, counts
 can be smoothed using an appropriate non-linear term, such as spatial
 random effects.
@@ -537,7 +537,7 @@ have set other options to compute the DIC,
 \code{control.compute=list(dic=TRUE)}, and the marginals of the linear
 predictors, using \code{control.predictor=list(compute=TRUE)}.
 
-<<>>=
+<<keep.source=FALSE>>=
 #fpp<-Ntrees~1+f(japgrd$INLAIDX, model="rw2d",nrow=nrow, ncol=ncol)
 fpp<-Ntrees~1+f(japgrd$SPIDX, model="bym", graph=adjpine)
 
@@ -569,18 +569,17 @@ print(spplot(japgrd, c("Ntrees", "INLALA"),
 ))
 @
 \end{center}
-\caption{Estimation of the intensity of a point pattern with \pkg{R-INLA}.}
+\caption{Estimation of the intensity of a point pattern with \pkg{R-INLA}, 
+Japanese black pine dataset}
 \label{fig:sppa}
 \end{figure}
 
 
 
-** Mention other possible models. **
-
 \subsection{Geostatistics}
 
 
-\pkg{R-INLA} deals with geostatistical data on a regular grid. THis means
+\pkg{R-INLA} deals with geostatistical data on a regular grid. This means
 that observations need to be matched to the points in the grid and that those
 points with no observations attached are considered as missing values.
 Hence, this is somewhat similar to the analysis of lattice data and point
@@ -639,14 +638,6 @@ Rongelap data set \citep{DiggleRibeiro:2007}, which records  radionuclide
 concentration at 157 different locations in Rongelap island. We have restricted
 the analysis to one of the clusters in the north-east part of the island
 because obervations need to be matched to a regular grid of points.
-
-
-
-**
-
-Shall we provide an example using the full data set?
-
-**
 
 <<keep.source=FALSE>>=
 library(geoR)
@@ -1337,7 +1328,7 @@ print(xtab)
 
 \begin{figure}[h]
 \begin{center}
-<<echo=FALSE, fig=TRUE>>=
+<<echo=FALSE, fig=TRUE, height=4, width=8>>=
 par(mfrow=c(1,3))
 #Compare results between INLA and CARBayes
 plot(density(1-lcarbayes$samples.rho, from=0, to=1), xlim=c(0,.2),
